--- a/src/home/css/Intro.css
+++ b/src/home/css/Intro.css
@@ -30,14 +30,15 @@
 } */
 
 .firstimage{
-    width: 50%;
+    width: 45%;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
 }
 
 .bunny{
     width: auto;
     margin: auto;
+    margin-right: 50px !important;
 }
 
 .firstimage img{
@@ -105,7 +106,6 @@
     margin-bottom: 20px;
 }
 
-
 .mobpara{
     font-size: 24px;
     text-transform: uppercase;
@@ -137,6 +137,14 @@
 /*Mobile ends*/
 
 /*first-about page starts*/
+
+.fahome{
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    padding-top: 8%;
+    padding-bottom: 8%;
+}
 
 .facontent{
     display: flex;
