--- a/src/home/css/Intro.css
+++ b/src/home/css/Intro.css
@@ -123,6 +123,7 @@
     padding-top: 12.8px;
     padding-bottom: 12.8px;
     border-radius: 50px;
+    font-weight: bold;
     width: fit-content;
     cursor: pointer;
     font-family: 'Work Sans', sans-serif;
