--- a/src/home/css/about.css
+++ b/src/home/css/about.css
@@ -246,10 +246,6 @@ margin-top: 10px;
     height: 100%;
 }
 
-.pict{
-    margin-bottom: -63%;
-}
-
 .center{
     display: flex;
     justify-content: center;
@@ -296,6 +292,7 @@ margin-top: 10px;
     padding-top: 12.8px;
     padding-bottom: 12.8px;
     border-radius: 50px;
+    margin-left: 10px !important;
     width: fit-content;
     cursor: pointer;
     font-family: 'Cabin', sans-serif;
@@ -313,7 +310,8 @@ margin-top: 10px;
 .mob-container{
     width: 100%;
     margin: auto;
-    margin-top: 33%;
+    margin-top: -3%;
+    margin-bottom: -3%;
 }
 
 .tab-container{
