--- a/src/home/css/Hire.css
+++ b/src/home/css/Hire.css
@@ -257,6 +257,7 @@ button.slick-prev:before{
 
 .careers h1{
     text-align: start;
+    white-space: nowrap;
     font-family: 'Cabin', sans-serif;
     font-style: normal;
     font-weight: 700;
@@ -267,7 +268,9 @@ button.slick-prev:before{
 }
 
 .careers a{
+    white-space: wrap;
     text-align: start;
+    word-break: break-all;
     font-family: 'Cabin', sans-serif;
     font-style: normal;
     font-weight: bold;
@@ -459,6 +462,7 @@ color: black;
     width: 100%;
     overflow-x: scroll;
     display: flex;
+    padding: 3px;
     white-space: nowrap;
     -ms-overflow-style: none;
     scrollbar-width: none;
@@ -469,7 +473,13 @@ color: black;
 }
 
 .insideslide{
+    margin-left: 15px;
+    margin-right: 15px;
     width: 100%;
+}
+
+a{
+    text-decoration: none !important;
 }
 
 .mobimage{
@@ -492,8 +502,6 @@ color: black;
     padding: 2px 10px;
     border-radius: 50px;
     white-space: nowrap;
-    margin-left: 10px;
-    margin-right: 10px;
     cursor: pointer;
     font-family: 'Cabin', sans-serif;
     font-style: normal;
