--- a/src/home/css/Hire.css
+++ b/src/home/css/Hire.css
@@ -242,7 +242,7 @@ button.slick-prev:before{
 
 .slideservice{
     padding-top: 10px;
-    width: 98%;
+    width: 90%;
     display: flex;
     margin: auto;
 }
@@ -253,6 +253,7 @@ button.slick-prev:before{
     justify-content: flex-start;
     padding-top: 15px;
     padding-bottom: 10px;
+    margin-top: 20px;
 }
 
 .careers h1{
@@ -261,7 +262,7 @@ button.slick-prev:before{
     font-family: 'Cabin', sans-serif;
     font-style: normal;
     font-weight: 700;
-    font-size: 20px;
+    font-size: 16px;
     line-height: 19px;
     text-transform: uppercase;
     color: #202020;
@@ -473,8 +474,8 @@ color: black;
 }
 
 .insideslide{
-    margin-left: 15px;
-    margin-right: 15px;
+    display: flex !important;
+    justify-content: center !important;
     width: 100%;
 }
 
@@ -499,7 +500,9 @@ a{
 
 .serviceslider-btn{
     background-color: transparent !important;
-    padding: 2px 10px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    width: 95%;
     border-radius: 50px;
     white-space: nowrap;
     cursor: pointer;
@@ -518,11 +521,11 @@ a{
 
 .serviceslider-afterbtn{
     background-color: black !important;
-    padding: 2px 10px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    width: 95%;
     border-radius: 50px;
     white-space: nowrap;
-    border-radius: 50px;
-    margin-left: 10px;
     cursor: pointer;
     font-family: 'Cabin', sans-serif;
     font-style: normal;
@@ -544,5 +547,12 @@ a{
 .inputslider{
     overflow-x: hidden;
 }
+
+.slick-prev, .slick-next{
+    height: 30px !important;
+    width: 30px !important;
+}
+
+
 
 /*slider btn ends*/
