--- a/src/home/css/Hire.css
+++ b/src/home/css/Hire.css
@@ -1,6 +1,6 @@
 .hire{
     width: 100%;
-    /* background-color: #EEEA64; */
+    background-color: #EEEA64;
     display: flex;
     flex-flow: column;
     align-items: center;
