--- a/src/components/css/hamburger.css
+++ b/src/components/css/hamburger.css
@@ -1,72 +1,107 @@
-.nav-links{
-    height: 65px;
+.nav-links {
+  height: 65px;
 }
 
 .menu-btn {
-    position: relative;
-    display: flex;
-    flex-flow: column;
-    width: 50px;
-    height: 80%;
-    margin-top: 20%;
-    cursor: pointer;
-    transition: all .5s ease-in-out;
-  }
-
-  .menu-btnx{
-    position: relative;
-    display: flex;
-    flex-flow: column;
-    width: 50px;
-    height: 70%;
-    margin-top: 30%;
-    cursor: pointer;
-    transition: all .5s ease-in-out;
-  }
-
-  .line1{
-      position: absolute;
-      width: 32px;
-      height: 1.5px;
-      margin-top: 14px;
-      margin-left: 8px;
-      background-color: #202020;
-  }
-
-  .line2{
-    position: absolute;
-    width: 28px;
-    height: 1.5px;
-    margin-top: 22px;
-    margin-left: 12px;
-    background-color: #202020;
+  position: relative;
+  display: flex;
+  flex-flow: column;
+  width: 50px;
+  height: 80%;
+  margin-top: 10%;
+  cursor: pointer;
+  transition: all 0.5s ease-in-out;
 }
 
-.line3{
-    position: absolute;
-    width: 24px;
-    height: 1.5px;
-    margin-top: 30px;
-    margin-left: 16px;
-    background-color: #202020;
+.menu-btnx {
+  position: relative;
+  display: flex;
+  flex-flow: column;
+  width: 50px;
+  height: 70%;
+  margin-top: 30%;
+  cursor: pointer;
+  transition: all 0.5s ease-in-out;
 }
 
-.xline1{
-    position: absolute;
-      width: 32px;
-      height: 1.5px;
-      margin-top: 14px;
-      margin-left: 8px;
-      background-color: #fff;   
-      transform: rotate(45deg);
+.line1 {
+  position: absolute;
+  width: 32px;
+  height: 1.5px;
+  margin-top: 14px;
+  margin-left: 8px;
+  background-color: #202020;
+  animation: lines1;
+  animation-duration: 0.5s;
 }
 
-.xline2{
-    position: absolute;
-      width: 32px;
-      height: 1.5px;
-      margin-top: 14px;
-      margin-left: 8px;
-      background-color: #fff;
-      transform: rotate(-45deg);
+.line2 {
+  position: absolute;
+  width: 28px;
+  height: 1.5px;
+  margin-top: 22px;
+  margin-left: 12px;
+  background-color: #202020;
+  animation: lines2;
+  animation-duration: 0.5s;
+}
+
+.line3 {
+  position: absolute;
+  width: 24px;
+  height: 1.5px;
+  margin-top: 30px;
+  margin-left: 16px;
+  background-color: #202020;
+  animation: lines3;
+  animation-duration: 0.5s;
+}
+
+@keyframes lines1{
+  from{margin-top: 22px;}
+  to {margin-bottom: 0;}
+}
+
+@keyframes lines2{
+  from{margin-top: 22px;}
+  to {margin-top: 22px;}
+}
+
+@keyframes lines3{
+  from{margin-top: 22px;}
+  to {margin-top: 30px;}
+}
+
+.xline1 {
+  position: absolute;
+  width: 32px;
+  height: 1.5px;
+  margin-top: 14px;
+  margin-left: 8px;
+  transform: rotate(45deg);
+  background-color: #fff; 
+  animation-name: example3;
+  animation-duration: 0.5s;
+}
+
+.xline2 {
+  position: absolute;
+  width: 32px;
+  height: 1.5px;
+  margin-top: 14px;
+  margin-left: 8px;
+  transform: rotate(-45deg);
+  background-color: #fff;
+  animation-name: example2;
+  animation-duration: 0.5s;
+}
+
+@keyframes example3{
+  from {transform: rotate(-45deg);}
+  to {transform: rotate(45deg);}
+}
+
+@keyframes example2{
+  from {transform: rotate(45deg);}
+  to {transform: rotate(-45deg);}
 }
