--- a/src/home/css/Intro.css
+++ b/src/home/css/Intro.css
@@ -15,8 +15,8 @@
     width: 100%;
     display: flex;
     justify-content: space-evenly;
-    padding-top: 10%;
-    padding-bottom: 10%;
+    padding-top: 6%;
+    padding-bottom: 6%;
 }
 
 .image{
@@ -25,9 +25,9 @@
     justify-content: center; 
 }
 
-/* .image img{
-    width: 100%;
-} */
+.image img{
+    width: 80%;
+}
 
 .firstimage{
     width: 45%;
@@ -57,12 +57,16 @@
 
 .para{
     color: rgb(135, 135, 135);
-    font-size: 30px;
+    font-size: 3em;
     text-align: start;
     text-transform: uppercase;
     font-family: 'Cabin', sans-serif;
     font-weight: 700;
     width: 80%;
+}
+
+button{
+    outline: none !important;
 }
 
 .btn{
@@ -84,6 +88,27 @@
     text-align: center;
     text-transform: uppercase;
     color: #F7008C;
+}
+
+.btn:hover{
+    background-color: #F7008C !important;
+    border: 1px solid rgb(247, 0, 140) !important;
+    padding-left: 25.6px;
+    padding-right: 25.6px;
+    padding-top: 12.8px;
+    padding-bottom: 12.8px;
+    border-radius: 50px;
+    width: fit-content;
+    cursor: pointer;
+    font-family: 'Cabin', sans-serif;
+    text-transform: uppercase;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #fff;
 }
 
 /*Mobile starts*/
@@ -129,6 +154,22 @@
     font-family: 'Work Sans', sans-serif;
     text-transform: uppercase;
     color: rgb(135, 135, 135);
+}
+
+.mobbtn:hover{
+    background-color: rgb(135, 135, 135) !important;
+    border: 1px solid rgb(135, 135, 135) !important;
+    padding-left: 25.6px;   
+    padding-right: 25.6px;
+    padding-top: 12.8px;
+    padding-bottom: 12.8px;
+    border-radius: 50px;
+    font-weight: bold;
+    width: fit-content;
+    cursor: pointer;
+    font-family: 'Work Sans', sans-serif;
+    text-transform: uppercase;
+    color: white;
 }
 
 .mobileimage img{
