--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,34 @@
 .App {
   width: 100%;
-  overflow-x: hidden;
+  transition: all 0.5s ease-in-out;
+}
+
+.Appcolor{
+  transition: all 0.5s ease-in-out;
+  background-color: #202020;
 }
 
 .largeapp{
   width: 1400px;
   overflow-x: hidden;
+}
+
+.load-center{
+  width: 100%;
+  height: 700px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.ui.segment{
+  width: 100%;
+  height: 700px;
+}
+
+.services-none{
+  width: 100%;
+  stroke-width: 0 !important;
+  background-color: #202020;
+  transition: all 0.5s ease-in-out;
 }
