--- a/src/about/Middle.css
+++ b/src/about/Middle.css
@@ -103,12 +103,16 @@
     line-height: 33px;
     color: #F7008C;
     text-transform: capitalize;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
     text-align: end;
     cursor: pointer;
 }
 
 .flexbox-title img{
     width: 30px;
+    margin-left: 10px;
     cursor: pointer;
     height: 20px;
 }
@@ -194,12 +198,15 @@ color: #202020;
     line-height: 33px;
     color: #fff;
     text-transform: capitalize;
-    text-align: end;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
     cursor: pointer;
 }
 
 .flexinbox-title img{
     width: 30px;
+    margin-left: 10px;
     cursor: pointer;
     height: 30px;
 }
