--- a/src/home/css/about.css
+++ b/src/home/css/about.css
@@ -21,7 +21,7 @@
 .aboutfirst{
     width: 95%;
     display: flex;
-    padding-top: 50px;
+    padding-top: 20px;
     margin: auto;
     margin-right: 0 !important;
     opacity: 1;
@@ -146,6 +146,7 @@ width: 90%;
 
 
 .sliderbox{
+    margin-top: 20px;
     width: 99.9%;
     display: flex;
 }
@@ -157,6 +158,7 @@ width: 90%;
 
 .slidercover{
     width: 280px;
+    margin-top: -20px;
     background-color: white;
     display: flex;
     flex-flow: column nowrap;
