--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,16 @@ code {
     monospace;
 }
 
+#root{
+  overflow-x: hidden;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+#root::-webkit-scrollbar{
+  display: none;
+}
+
 .container {
   width: 95%;
   display: flex;
