--- a/src/home/css/Intro.css
+++ b/src/home/css/Intro.css
@@ -70,7 +70,7 @@ button{
 }
 
 .btn{
-    background-color: white !important;
+    background-color: transparent !important;
     border: 1px solid rgb(247, 0, 140) !important;
     padding-left: 25.6px;
     padding-right: 25.6px;
@@ -141,7 +141,7 @@ button{
 }
 
 .mobbtn{
-    background-color: white !important;
+    background-color: transparent !important;
     border: 1px solid rgb(135, 135, 135) !important;
     padding-left: 25.6px;   
     padding-right: 25.6px;
