--- a/src/components/css/Nav.css
+++ b/src/components/css/Nav.css
@@ -2,9 +2,9 @@
     width: 100%;
     position: fixed;
     background-color: white;
-    transition: all 0.8s ease-in-out;
+    transition: all 0.5s ease-in-out;
     z-index: 999;
-    height: 60px;
+    height: 50px;
 }
 
 header{
@@ -33,9 +33,10 @@ header{
 .navbar{
     width: 100%;
     position: fixed;
+    transition: all 0.5s ease-in-out;
     background-color: #EEEA64;
     z-index: 999;
-    height: 60px;
+    height: 50px;
     padding: 0 0 0 0;
 }
 
@@ -45,7 +46,7 @@ header{
     position: fixed;
     background-color: #F7008C;
     z-index: 999;
-    transition: all 1s ease-in-out;
+    transition: all 0.5s ease-in-out;
     padding-bottom: 40px;
 }
 
@@ -54,7 +55,7 @@ header{
     height: 100%;
     position: fixed;
     background-color: #F7008C;
-    transition: all 1s ease-in-out;
+    transition: all 0.5s ease-in-out;
     z-index: 999;
 }
 
@@ -62,6 +63,7 @@ header{
     width: 98%;
     display: flex;
     margin: auto;
+    margin-top: 0 !important;
     justify-content: space-between;
 }
 
