--- a/src/home/css/Hire.css
+++ b/src/home/css/Hire.css
@@ -522,7 +522,7 @@ a{
     border: 1px solid #202020 !important;
 }
 
-.serviceslider-btn:hover{
+/* .serviceslider-btn:hover{
     background-color: black !important;
     padding-top: 5px;
     padding-bottom: 5px;
@@ -544,6 +544,27 @@ a{
     border: 1px solid #202020 !important;
 }
 
+.serviceslider-afterbtn:hover{
+    background-color: transparent !important;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    width: 95%;
+    border-radius: 50px;
+    white-space: nowrap;
+    cursor: pointer;
+    font-family: 'Cabin', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    color: #202020;
+    text-transform: uppercase;
+    margin-bottom: 5px !important;
+    margin-top: 0;
+    border: 1px solid #202020 !important;
+} */
+
 .serviceslider-afterbtn{
     background-color: black !important;
     padding-top: 5px;
@@ -558,29 +579,8 @@ a{
     font-size: 16px;
     line-height: 19px;
     text-align: center;
+    text-transform: uppercase;
     color: #fff;
-    text-transform: uppercase;
-    margin-bottom: 5px !important;
-    margin-top: 0;
-    border: 1px solid #202020 !important;
-}
-
-.serviceslider-afterbtn{
-    background-color: transparent !important;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    width: 95%;
-    border-radius: 50px;
-    white-space: nowrap;
-    cursor: pointer;
-    font-family: 'Cabin', sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 19px;
-    text-align: center;
-    text-transform: uppercase;
-    color: #202020;
     margin-bottom: 3px !important;
     margin-top: 0;
     outline: none !important;
