--- a/src/home/css/Intro.css
+++ b/src/home/css/Intro.css
@@ -35,12 +35,6 @@
     justify-content: flex-end;
 }
 
-.bunny{
-    width: auto;
-    margin: auto;
-    margin-right: 50px !important;
-}
-
 .firstimage img{
     height: auto !important;
     width: auto;
@@ -184,7 +178,7 @@ button{
     width: 100%;
     display: flex;
     justify-content: space-evenly;
-    padding-top: 6%;
+    padding-top: 7%;
     padding-bottom: 8%;
 }
 
@@ -195,7 +189,6 @@ button{
     align-items: flex-start;
     padding-bottom: 20px;
     flex-flow: column nowrap;
-    padding-top: 30px;
 }
 
 .fafirst-title{
@@ -275,6 +268,24 @@ font-weight: normal;
 font-size: 16px;
 line-height: 22px;
 color: #202020;
+}
+
+.firstfaimage{
+    width: 45%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.bunny{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.bunny img{
+    width: 75%;
+    margin-left: 10%;
 }
 
 /*first-about page ends*/
