--- a/src/home/css/about.css
+++ b/src/home/css/about.css
@@ -22,8 +22,8 @@
     width: 95%;
     display: flex;
     padding-top: 20px;
+    justify-content: center;
     margin: auto;
-    margin-right: 0 !important;
     opacity: 1;
     transition: all 0.5s ease-in-out;
 }
@@ -39,9 +39,9 @@
 }
 
 .yellowtab{
-    width: 33%;
+    width: 36%;
     height: fit-content !important;
-    margin-right: -23%;
+    margin-right: -10%;
     margin-bottom: -20px;
 }
 
@@ -136,7 +136,7 @@ width: 90%;
 }
 
 .aboutvideo{
-    width: 85%;
+    width: 65%;
     display: flex;
     height: 430px;
     justify-content: center;
@@ -144,21 +144,21 @@ width: 90%;
     margin-bottom: -40px;
 }
 
-
 .sliderbox{
-    margin-top: 20px;
-    width: 99.9%;
+    margin-top: 20px !important;
+    width: 90%;
+    margin: auto;
     display: flex;
 }
 
 .slider{
     margin-left: 50px;
-    width: 60%;
+    width: 67%;
 }
 
 .slidercover{
     width: 280px;
-    margin-top: -20px;
+    margin-top: -20px !important;
     background-color: white;
     display: flex;
     flex-flow: column nowrap;
@@ -256,28 +256,15 @@ margin-top: 10px;
 }
 
 .imag{
-    width: 65% !important;
-    margin-left: -25%;
-}
-
-.imag{
-    margin-right: -36%;
+    width: 100% !important;
+    margin-left: 10%;
 }
 
 .ifade{
-    width: 65%;
+    margin-left: 10%;
+    width: 100%;
 }
 
-.iconplay{
-    width: 100px;
-    height: 100px;
-    margin-top: 160px;
-}
-
-.mobplay{
-    width: 150px;
-    height: 150px;
-}
 
 .frame{
     display: none;
