--- a/src/home/css/Hire.css
+++ b/src/home/css/Hire.css
@@ -358,6 +358,28 @@ form{
     margin-bottom: 0;
 }
 
+.formbtn:hover{
+    background-color: transparent !important;
+    border: 1px solid black !important;
+    padding-left: 25.6px;
+    padding-right: 25.6px;
+    padding-top: 12.8px;
+    padding-bottom: 12.8px;
+    border-radius: 50px;
+    width: fit-content;
+    cursor: pointer;
+    font-family: 'Cabin', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    text-transform: uppercase;
+    color: black;
+    margin-top: 20px;
+    margin-bottom: 0;
+}
+
 input{
     font-family: 'Cabin',sans-serif;
 font-style: normal;
