--- a/src/home/css/about.css
+++ b/src/home/css/about.css
@@ -214,6 +214,26 @@ margin-top: 10px;
     color: white;
 }
 
+.sliderbtn:hover{
+    background-color: transparent !important;
+    border: 1px solid black !important;
+    padding-left: 25.6px;
+    padding-right: 25.6px;
+    padding-top: 12.8px;
+    padding-bottom: 12.8px;
+    border-radius: 50px;
+    width: fit-content;
+    cursor: pointer;
+    font-family: 'Cabin', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    text-transform: uppercase;
+    color: black;
+}
+
 .slide{
     margin-top: 40px;
 }
