--- a/src/home/css/about.css
+++ b/src/home/css/about.css
@@ -305,6 +305,11 @@ img.sliderimg{
     height: 100%;
 }
 
+img.tab-pict{
+    width: 100%;
+    height: 450px;
+}
+
 .center{
     display: flex;
     justify-content: center;
