--- a/src/home/css/Hire.css
+++ b/src/home/css/Hire.css
@@ -4,6 +4,16 @@
     display: flex;
     flex-flow: column;
     align-items: center;
+    transition: all 0.5s ease-in-out;
+}
+
+.hireColor{
+    width: 100%;
+    background-color:transparent;
+    transition: all 0.5s ease-in-out;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
 }
 
 .largehire{
