--- a/src/home/css/Intro.css
+++ b/src/home/css/Intro.css
@@ -5,7 +5,7 @@
 }
 
 .largeIntro{
-    width: 1400px;
+    width: 100%;
     height: fit-content !important;
     margin: auto;
     padding-top: 56px !important;
