--- a/src/home/css/Intro.css
+++ b/src/home/css/Intro.css
@@ -131,6 +131,8 @@ button{
     font-family: 'Cabin', sans-serif;
     font-weight: 700;
     text-align: center;
+    width: 80%;
+    margin: auto;
     color: rgb(247, 0, 140);
 }
 
