--- a/src/home/css/Hire.css
+++ b/src/home/css/Hire.css
@@ -296,10 +296,13 @@ button.slick-prev:before{
     line-height: 28px;
     text-transform: none;
     color: #202020;
-    padding-left: 10px;
     word-break: break-all;
     display: flex;
     align-items: center;
+}
+
+.careers a img{
+    margin-right: 5px;
 }
 
 /* .slick-slide{
