--- a/src/home/css/Services.css
+++ b/src/home/css/Services.css
@@ -24,6 +24,13 @@
     flex-flow: column nowrap;
 }
 
+.mobile{
+    width: 97%;
+    margin: auto;
+    display: flex;
+    flex-flow: column nowrap;
+}
+
 .services-heading{
     width: 100%;
     text-align: center;
@@ -174,7 +181,7 @@
     color: #202020;
     padding-top: 70px;
     padding-bottom: 10px;
-    padding-left: 15px;
+    padding-left: 10px;
 }
 
 .services-whitemob{
@@ -217,7 +224,6 @@
     text-align: left;
     color: #F7008C;
     padding-top: 10px;
-    padding-left: 10px;
     text-transform: capitalize;
 }
 
@@ -230,7 +236,6 @@
     text-align: left;
     color: #202020;
     padding-top: 5px;
-    padding-left: 10px;
 }
 
 .mob-paras{
@@ -242,7 +247,6 @@
     text-align: left;
     color: #fff;
     padding-top: 5px;
-    padding-left: 10px;
 }
 
 .mob-pic img{
