--- a/src/home/css/Hire.css
+++ b/src/home/css/Hire.css
@@ -454,6 +454,14 @@ color: black;
     flex-flow: column;
 }
 
+.formAlign{
+    width: 100%;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .first-box-mobcontainer{
     width: 100%;
     display: flex;
