--- a/src/home/css/about.css
+++ b/src/home/css/about.css
@@ -16,6 +16,11 @@
     margin: auto;
 }
 
+.largeabout-container{
+    width: 1400px;
+    margin: auto;
+}
+
 .aboutfirst{
     width: 95%;
     display: flex;
