--- a/src/home/css/Services.css
+++ b/src/home/css/Services.css
@@ -1,13 +1,17 @@
 
 .services{
     width: 100%;
-    padding-bottom: 50px;
     transition: all 0.5s ease-in-out;
 }
 
 .services-yell{
     width: 100%;
-    padding-bottom: 50px;
+    background-color: #EEEA64;
+    transition: all 0.5s ease-in-out;
+}
+
+.largeservices-yell{
+    width: 100%;
     background-color: #EEEA64;
     transition: all 0.5s ease-in-out;
 }
